--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-
 # JDBC properties
-spring.datasource.url=jdbc:mysql://localhost:3306/paymybuddy?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=nico5310
+spring.datasource.url                   = jdbc:mysql://localhost:3306/paymybuddy?serverTimezone=UTC&useSSL=false&useLegacyDatetimeCode=false
+spring.datasource.username              = root
+spring.datasource.password              = nico5310
 
 #Hibernate properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto           = update
