--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.datasource.url                   = jdbc:mysql://localhost:3306/paymybuddy
 spring.datasource.username              = root
 spring.datasource.password              = nico5310
 
+server.port                             = 8080
+
 #Hibernate properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto           = update
