--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,10 +1,13 @@
-JDBC properties
-spring.datasource.url                   = jdbc:mysql://localhost:3306/paymybuddytest?serverTimezone=UTC&useSSL=false\
+#JDBC properties
+spring.datasource.url                      = jdbc:mysql://localhost:3306/paymybuddytest?serverTimezone=UTC&useSSL=false\
   &useLegacyDatetimeCode=false
-spring.datasource.username              = root
-spring.datasource.password              = nico5310
+spring.datasource.username                 = root
+spring.datasource.password                 = nico5310
+
+server.port                                = 8080
 
 #Hibernate properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect    = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.hibernate.ddl-auto              = update
+
