--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,5 +9,5 @@ server.port                                = 8080
 #Hibernate properties
 spring.jpa.properties.hibernate.dialect    = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.hibernate.ddl-auto              = update
+spring.jpa.hibernate.ddl-auto              = create
 
