--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,27 @@
-# JDBC properties
-spring.datasource.url                   = jdbc:mysql://localhost:3306/paymybuddy?serverTimezone=UTC&useSSL=false&useLegacyDatetimeCode=false
-spring.datasource.username              = root
-spring.datasource.password              = nico5310
+info.name                                                  = PayMyBuddy
+info.description                                           = WebApplication used to send money between peoples
 
-server.port                             = 8080
+# JDBC properties
+spring.datasource.url                                      = jdbc:mysql://localhost:3306/paymybuddy?serverTimezone=UTC&useSSL=false&useLegacyDatetimeCode=false
+spring.datasource.username                                 = root
+spring.datasource.password                                 = nico5310
+
+server.port                                                = 8080
 
 #Hibernate properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto           = update
+spring.jpa.properties.hibernate.dialect                    = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.format_sql                 = true
+spring.jpa.hibernate.ddl-auto                              = update
+
+##Log level configuration
+#logging.level.error                                        = ERROR
+#logging.level.com.PayMyBuddy                               = INFO
+#logging.level.org.springframework.boot.autoconfigure.h2    = INFO
+#logging.level.org.springframework.boot.web.embedded.tomcat = INFO
+#logging.level.org.hibernate.SQL                            = DEBUG
+#logging.level.org.hibernate.type                           = TRACES
+#management.endpoints.web.exposure.include                  = info, health, metrics, httptrace
+#
+#logging.level.root                                         = info
+#logging.level.org.springframework.web                      = DEBUG
+#spring.main.banner-mode                                    = off
