--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- SPRINGBOOT STATER VALIDATION -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>2.5.0</version>
+        </dependency>
         <!-- SPRINGBOOT STARTER THYMELEAF-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
