--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,16 +14,13 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.hibernate.ddl-auto              = update
 
 
+#Actuator Config
+management.endpoints.web.exposure.include                  = health, info, trace, metrics
 
-##Log level configuration
-#logging.level.error                                        = ERROR
-#logging.level.com.PayMyBuddy                               = INFO
-#logging.level.org.springframework.boot.autoconfigure.h2    = INFO
-#logging.level.org.springframework.boot.web.embedded.tomcat = INFO
-#logging.level.org.hibernate.SQL                            = DEBUG
-#logging.level.org.hibernate.type                           = TRACES
-#management.endpoints.web.exposure.include                  = info, health, metrics, httptrace
-#
-#logging.level.root                                         = info
-#logging.level.org.springframework.web                      = DEBUG
-#spring.main.banner-mode                                    = off
+#LOG LEVEL CONFIGURATION
+logging.level.root                                         = INFO
+logging.level.error                                        = ERROR
+logging.level.org.springframework.web                      = DEBUG
+logging.level.org.springframework.security                 = DEBUG
+logging.level.com.nico5310.PayMyBuddy                      = INFO
+logging.level.org.springframework.boot.web.embedded.tomcat = INFO
